# passtw

./: .gitignore  Makefile  README.md  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: config.json
src/: cli.py  config_loader.py  crypto_manager.py  generator.py  keygen.py  paths.py  preferences.py
src/passtw/: cli.py  config_loader.py  crypto_manager.py  generator.py  keygen.py  paths.py  preferences.py
tests/: test_config_loader.py  test_crypto_manager.py  test_generator.py
